update HTML files

--- a/classroom/index.html
+++ b/classroom/index.html
@@ -6,9 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VUMS - Clasroom (03.05.2022)</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Raleway&display=swap" rel="stylesheet">
+<script src="js/script.js"></script>
 </head>
 <body>
-  <h1>Hello World!</h1>  
+  <div id="header"></div>
+  <div class="left-side"></div>
+  <div class="content">
+      <br><br>
+      <h1>My CV Template</h1>
+      <h2>Linda Roze</h2>
+      <hr>
+      <br>
+      <p class="paragraphStyle">Interests:</p>
+      <ol>
+          <li> QA</li>
+          <li>Manual testing</li>
+          <li>Test Auomation</li>
+          <li>Programming</li>
+      </ol>
+      <br>
+      <p class="paragraphStyle">Skills:</p>
+      <ul>Java</ul>
+      <ul>MsExcel</ul>
+      <br>
+      <p class="paragraphStyle">Education:</p>
+      <ul>RTU</ul>
+      <br>
+      <p class="paragraphStyle">Experience:</p>
+      <ul>Manual testing</ul>
+      <br>
+  </div>
+  <div class="right-side"></div>
+  <div id="footer">
+      <h3 id="copyright">All rights reserved. VUMC @2022</h3>
+  </div>
 </body>
 </html>
